{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 87,
  "lineage": "101efe5c-5c5b-416b-57ba-4b44b04e7c53",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbadfda62895d863",
            "domain": "vpc",
            "id": "eipalloc-0bbadfda62895d863",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-46-253.compute-1.amazonaws.com",
            "public_ip": "3.232.46.253",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:internet-gateway/igw-09a82dff7bcafd3ac",
            "id": "igw-09a82dff7bcafd3ac",
            "owner_id": "905418443493",
            "tags": {
              "Name": "demo-eks-cluster-igw"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-igw"
            },
            "vpc_id": "vpc-0b8a8989a0d84c150"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bbadfda62895d863",
            "association_id": "eipassoc-04c205590cd44b6e1",
            "connectivity_type": "public",
            "id": "nat-0fa7f2b355560db88",
            "network_interface_id": "eni-0302ab204d4a862ff",
            "private_ip": "10.0.0.201",
            "public_ip": "3.232.46.253",
            "subnet_id": "subnet-0cb3e49f6c5c4abbe",
            "tags": {
              "Name": "demo-eks-cluster-nat-gateway"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-09a82dff7bcafd3ac",
            "id": "r-rtb-0e26d370780e7e0441080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e26d370780e7e044",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f6205bf593d6351c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fa7f2b355560db88",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f6205bf593d6351c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat_gw",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:route-table/rtb-0f6205bf593d6351c",
            "id": "rtb-0f6205bf593d6351c",
            "owner_id": "905418443493",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-eks-cluster-private-rt"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8a8989a0d84c150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:route-table/rtb-0e26d370780e7e044",
            "id": "rtb-0e26d370780e7e044",
            "owner_id": "905418443493",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "demo-eks-cluster-public-rt"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8a8989a0d84c150"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0173560f65dd869dc",
            "route_table_id": "rtb-0f6205bf593d6351c",
            "subnet_id": "subnet-00340bbb7fd4ef9ee"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000d5da4776163eb",
            "route_table_id": "rtb-0f6205bf593d6351c",
            "subnet_id": "subnet-093aff1aae8189606"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0573fa878acc75202",
            "route_table_id": "rtb-0e26d370780e7e044",
            "subnet_id": "subnet-0cb3e49f6c5c4abbe"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e4728568b5e9c9",
            "route_table_id": "rtb-0e26d370780e7e044",
            "subnet_id": "subnet-0de8c50bd8547870d"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:subnet/subnet-00340bbb7fd4ef9ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00340bbb7fd4ef9ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418443493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-private-subnet-1"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-private-subnet-1"
            },
            "vpc_id": "vpc-0b8a8989a0d84c150"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:subnet/subnet-093aff1aae8189606",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093aff1aae8189606",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "905418443493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-private-subnet-2"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-private-subnet-2"
            },
            "vpc_id": "vpc-0b8a8989a0d84c150"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:subnet/subnet-0cb3e49f6c5c4abbe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb3e49f6c5c4abbe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418443493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-public-subnet-1"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-public-subnet-1"
            },
            "vpc_id": "vpc-0b8a8989a0d84c150"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:subnet/subnet-0de8c50bd8547870d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de8c50bd8547870d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "905418443493",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "demo-eks-cluster-public-subnet-2"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-public-subnet-2"
            },
            "vpc_id": "vpc-0b8a8989a0d84c150"
          },
          "dependencies": [
            "aws_vpc.eks_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:905418443493:vpc/vpc-0b8a8989a0d84c150",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06475d8e016453cc5",
            "default_route_table_id": "rtb-011f61b4544a80029",
            "default_security_group_id": "sg-0363afdbf2bddd52e",
            "dhcp_options_id": "dopt-059e398a763375e6b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8a8989a0d84c150",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011f61b4544a80029",
            "owner_id": "905418443493",
            "tags": {
              "Name": "demo-eks-cluster-vpc"
            },
            "tags_all": {
              "Name": "demo-eks-cluster-vpc"
            }
          }
        }
      ]
    }
  ]
}